# python-preisach

./: .gitignore  INSTALL.md  license.md  preisach_python.py  pyproject.toml  readme.md
preisach/: __init__.py  plot_preisach_widget.py  preisach_python.py  weights.py
src/preisach/: plot_preisach_widget.py
